--- a/index.css
+++ b/index.css
@@ -212,3 +212,19 @@ nav ul li ul li a:hover{
         transform: scale(1);
     }    
 }
+
+.slider-container {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+}
+  
+  .slider-container img {
+    flex: 0 0 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    scroll-snap-align: center;
+  }
