--- a/index.css
+++ b/index.css
@@ -324,3 +324,119 @@ nav ul li ul li a:hover{
       width: 100%;
     }
 }
+
+.footer {
+    width: 100%;
+    background: #bdbab2;
+    margin-top: 60px;
+}
+
+.container-footer-all{
+    width: 100%;
+    margin: auto;
+    padding: 40px;
+}
+
+.container-body{
+    display: flex;
+    justify-content: space-between;
+}
+
+.colum1{
+    max-width: 400px;
+}
+
+.colum1 h1{
+    font-size: 22px;
+}
+
+.column1 p{
+    font-size: 14px;
+    margin-top: 20px;
+}
+
+.colum2{
+    max-width: 400px;
+}
+
+.colum2 h1{
+    font-size: 22px;
+}
+
+.row2{
+    margin-top: 10px;
+    display: flex;
+}
+
+.row2 img{
+    width: 25px;
+    height: 25px;
+}
+
+.row2 label{
+    margin-top: 1px;
+    margin-left: 20px;
+    font-size: 15px;
+}
+
+.colum3 h1{
+    font-size: 20px;
+    margin-left: 20px;
+}
+
+.row3{
+    margin-top: 20px;
+    display: flex;
+}
+
+.row3 img{
+    width: 26px;
+    height: 26px;
+    margin-left: 20px;
+}
+
+.row3 label{
+    margin-left: 20px;
+    font-size: 15px;
+}
+
+.container-footer{
+    width: 100%;
+    background: #777571;
+    padding: 10px;
+}
+
+.footer-footer{
+    display: flex;
+    justify-content: space-between;
+}
+
+.copyright{
+    color: #000000;
+}
+
+.copyright a{
+    text-decoration: none;
+    color: rgb(29, 28, 28);
+    font-weight: bold;
+}
+
+.information a{
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+
+@media screen and (max-width: 1100px){
+    .container-body{
+        flex-wrap: wrap;
+    }
+    
+    .colum1{
+        max-width: 100%;
+    }
+
+    .colum2,
+    .colum3{
+        margin-top: 40px;
+    }
+}
